# drmeter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  codecov.yml  drmeter.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: docker-build.yaml  docker.yaml  linters.yaml  mypy.yaml  release.yaml  screenshots.yaml  tests.yaml
drmeter/: __init__.py  __main__.py  algorithm.py  cli.py  compat.py  exceptions.py  models.py  utils.py
tests/: test_compat.py  test_score.py
tests/fixtures/: README.md  __init__.py  _fixtures.json
