[tool.poetry]
name = "drmeter"
version = "0.2.1"
description = "Dynamic Range (DR) algorithm implementation in python"
authors = ["Jan Willhaus <mail@janwillhaus.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/janw/drmeter"

[tool.poetry.scripts]
drmeter = 'drmeter.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
soundfile = "^0.12.1"
numpy = "^1.25"
rich = "^13.4.2"
rich-click = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
ruff = "^0.0.278"
tox = "^4.6.4"
ipython = "^8.14.0"
ipdb = "^0.13.13"
mypy = "^1.4.1"

[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[tool.ruff]
line-length = 120
target-version = "py39"
extend-select = [
    "I",   # isort
    "B",   # bugbear
    "A",   # builtins
    "ISC", # implicit-str-concat
    "Q",   # quotes
    "TID", # tidy-imports
    "C4",  # comprehensions
    "SIM", # simplify
    "C90", # mccabe
]
unfixable = [
    "B", # bugbear
]
ignore = [
    "SIM108", # if-else-block-instead-of-if-exp
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
packages = ["drmeter", "tests"]

[[tool.mypy.overrides]]
module = "soundfile.*"
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "tests/*",
    "venv/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
