[tool.poetry]
name = "drmeter"
version = "0.3.2"
description = "Dynamic Range (DR) algorithm implementation in python"
authors = ["Jan Willhaus <mail@janwillhaus.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/janw/drmeter"

[tool.poetry.scripts]
drmeter = 'drmeter.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
soundfile = "^0.12.1"
numpy = "^2"
rich = "^13"
rich-click = "^1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4"
ruff = "0.6.9"
tox = "^4"
ipython = "^8"
ipdb = "^0.13.13"
mypy = "^1"
bump-my-version = "^0.11.0"
commitizen = "^3.29.1"

[tool.poetry.group.tests.dependencies]
pytest = "^8"
pytest-cov = "^5"

[tool.commitizen]
version_scheme = "semver"
version_provider = "poetry"
version_files = [
    "pyproject.toml:version = ",
    "drmeter/__init__.py",
]
annotated_tag = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_start_rev = "v0.2.2"
gpg_sign = true

[tool.ruff]
line-length = 120
target-version = "py39"
extend-select = [
    "I",   # isort
    "B",   # bugbear
    "A",   # builtins
    "ISC", # implicit-str-concat
    "Q",   # quotes
    "TID", # tidy-imports
    "C4",  # comprehensions
    "SIM", # simplify
    "C90", # mccabe
]
unfixable = [
    "B", # bugbear
]
ignore = [
    "SIM108", # if-else-block-instead-of-if-exp
    "ISC001", # single-line-implicit-string-concatenation (conflicts with ruff format)
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
packages = ["drmeter", "tests"]

[[tool.mypy.overrides]]
module = "soundfile.*"
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "tests/*",
    "venv/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:"
]
fail_under = 60
precision = 2
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
